# skills_fabric

./: .auto-claude-status  .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  MASTER_RESEARCH_GUIDE.md  README.md  pyproject.toml
crawl_output/docling/: codewiki_docling.md  link_catalog.md  symbol_catalog.md
crawl_output/langgraph/: progressive_understanding.json  stats.json  symbol_catalog.md
docs/: ARCHITECTURE.md  BMAD_V6_DEVELOPMENT_PLAN.md  ICEBERG.md  IMPROVEMENTS_ROADMAP.md  PROOF_BASED_ARCHITECTURE.md  QUICKSTART.md
docs/bmad/: agent-analysis.md  improvement-roadmap.md  tasks.md
docs/speckit/: constitution.md  specification.md
older_project/: PROGRESSIVE_ICEBERG_ARCHITECTURE.md  README.md  ZAI_GLM_INTEGRATION.md
older_project/andreea_tools/: README.md
older_project/audit_reports/: BMAD_AUDIT_FINDINGS.md  BMAD_AUDIT_PLAN.md  BMAD_HONEST_GAP_ANALYSIS.md  BMAD_WORKFLOW_INTEGRATION.md  QA_AUDIT_REPORT.md  SOVEREIGN_PLATFORM_ARCHITECTURE.md  SOVEREIGN_SKILL_FACTORY_ARCHITECTURE.md  ULTRATHINK_ROBUSTNESS_STRATEGY.md  integration_strategy.md  verification_protocol.md
older_project/ops_scripts/: deep_infra_crawl.py  (+3 more)
openspec/: openspec.config.json
research_output/: DETAILED_FRAMEWORKS_REFERENCE.md  INFRASTRUCTURE_RESEARCH_REPORT.md  OPTIMAL_INFRASTRUCTURE_MAP.md  ROUND5_SKILL_PATTERNS_REPORT.md  round5_skill_patterns.json
retrievals/: PERPLEXITY_API_REFERENCE.md  README.md  __init__.py  arxiv_client.py  brave_search_client.py  brightdata_client.py  perplexity_client.py
scripts/: audit_pipeline.py  audit_pipeline_v2.py  autonomous_skill_gen.sh  build_docling_codewiki.py  build_langgraph_codewiki.py  crawl_codewiki_brightdata.py  crawl_docling_codewiki.py  crawl_docling_simple.py  deep_infrastructure_research.py  followup_research.py  langgraph_deep_understanding.py  langgraph_hard_example.py  round5_skill_patterns.py  round6_frameworks.py  test_assertion_engine.py  test_citations_real_output.py  test_codewiki_first.py  test_ddr_docling.py  test_ddr_langgraph.py  test_deep_analysis.py  test_execution_proof.py  test_full_pipeline_docling.py  test_glm_client.py  test_hallucination_metrics.py  test_kuzu_graph.py  test_langgraph_pipeline.py  test_llm_agent.py  test_lsp_proofs.py  test_multi_auditor.py  test_progressive_disclosure.py  test_progressive_docling.py  test_proof_based_understanding.py  test_property_based.py  test_r_server.py  test_scip_ddr_integration.py  test_scip_index.py  test_skill_tracker.py  test_slicing.py  test_tracing.py  test_tree_sitter_mcp.py  (+2 more)
specs/: SKILL.spec.md
tests/: __init__.py  conftest.py  test_ast_parser.py  test_ddr.py  test_glm_client.py  test_lsp_client.py  test_tree_sitter.py
(+2145 files in other folders)
